--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Currency Converter</title>
     <link
       rel="icon"
       type="image/x-icon"
-      href="./assets/images/joystick_favicon.png"
+      href="./assets/images/money-favicon.png"
     />
     <link
       rel="stylesheet"
@@ -17,6 +17,145 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="model-container">
+      <div class="img-content">
+        <img src="./assets/images/money-icon.png" alt="Currency" />
+      </div>
+      <div class="currency-exchange-content">
+        <div class="currency-amount">
+          <label for="amount">Amount</label>
+          <input type="number" id="amount" value="1" />
+        </div>
+        <div class="currency">
+          <label for="from">From</label>
+          <select name="form" id="from">
+            <option value="AED">AED - Arab Emirates Dirham</option>
+            <option value="ARS">ARS - Argentine Peso</option>
+            <option value="AUD">AUD - Australian Dollar</option>
+            <option value="BGN">BGN - Bulgarian Lev</option>
+            <option value="BRL">BRL - Brazilian Real</option>
+            <option value="BSD">BSD - Bahamian Dollar</option>
+            <option value="CAD">CAD - Canadian Dollar</option>
+            <option value="CHF">CHF - Swiss Franc</option>
+            <option value="CLP">CLP - Chilean Peso</option>
+            <option value="CNY">CNY - Chinese Yuan Renminbi</option>
+            <option value="COP">COP - Colombian Peso</option>
+            <option value="CZK">CZK - Czech Koruna</option>
+            <option value="DKK">DKK - Danish Krone</option>
+            <option value="DOP">DOP - Dominican Peso</option>
+            <option value="EGP">EGP - Egyptian Pound</option>
+            <option value="EUR">EUR - Euro</option>
+            <option value="FJD">FJD - Fijian Dollar</option>
+            <option value="GBP">GBP - British Pound</option>
+            <option value="GTQ">GTQ - Guatemalan Quetzal</option>
+            <option value="HKD">HKD - Hong Kong Dollar</option>
+            <option value="HRK">HRK - Croatian Kuna</option>
+            <option value="HUF">HUF - Hungarian Forint</option>
+            <option value="IDR">IDR - Indonesian Rupiah</option>
+            <option value="ILS">ILS - Israeli Shekel</option>
+            <option value="INR">INR - Indian Rupee</option>
+            <option value="ISK">ISK - Icelandic Krona</option>
+            <option value="JPY">JPY - Japanese Yen</option>
+            <option value="KRW">KRW - South Korean Won</option>
+            <option value="KZT">KZT - Kazakhstani Tenge</option>
+            <option value="MXN">MXN - Mexican Peso</option>
+            <option value="MYR">MYR - Malaysian Ringgit</option>
+            <option value="NOK">NOK - Norwegian Krone</option>
+            <option value="NZD">NZD - New Zealand Dollar</option>
+            <option value="PAB">PAB - Panamanian Balboa</option>
+            <option value="PEN">PEN - Peruvian Sol</option>
+            <option value="PHP">PHP - Philippine Peso</option>
+            <option value="PKR">PKR - Pakistani Rupee</option>
+            <option value="PLN">PLN - Polish Zloty</option>
+            <option value="PYG">PYG - Paraguayan Guarani</option>
+            <option value="RON">RON - Romanian Leu</option>
+            <option value="RUB">RUB - Russian Ruble</option>
+            <option value="SAR">SAR - Saudi Arabian Riyal</option>
+            <option value="SEK">SEK - Swedish Krona</option>
+            <option value="SGD">SGD - Singapore Dollar</option>
+            <option value="THB">THB - Thai Baht</option>
+            <option value="TRY">TRY - Turkish Lira</option>
+            <option value="TWD">TWD - Taiwan New Dollar</option>
+            <option value="UAH">UAH - Ukrainian Hryvnia</option>
+            <option value="USD" selected>USD - US Dollar</option>
+            <option value="UYU">UYU - Uruguayan Peso</option>
+            <option value="VND">VND - Vietnamese Dong</option>
+            <option value="ZAR">ZAR - South African Rand</option>
+          </select>
+        </div>
+        <div class="currency-swap">
+          <button id="swap" class="btn">
+            <i class="fa-solid fa-right-left"></i>
+          </button>
+        </div>
+        <div class="currency">
+          <label for="to">To</label>
+          <select name="to" id="to">
+            <option value="AED">AED - Arab Emirates Dirham</option>
+            <option value="ARS">ARS - Argentine Peso</option>
+            <option value="AUD">AUD - Australian Dollar</option>
+            <option value="BGN">BGN - Bulgarian Lev</option>
+            <option value="BRL">BRL - Brazilian Real</option>
+            <option value="BSD">BSD - Bahamian Dollar</option>
+            <option value="CAD">CAD - Canadian Dollar</option>
+            <option value="CHF">CHF - Swiss Franc</option>
+            <option value="CLP">CLP - Chilean Peso</option>
+            <option value="CNY">CNY - Chinese Yuan Renminbi</option>
+            <option value="COP">COP - Colombian Peso</option>
+            <option value="CZK">CZK - Czech Koruna</option>
+            <option value="DKK">DKK - Danish Krone</option>
+            <option value="DOP">DOP - Dominican Peso</option>
+            <option value="EGP">EGP - Egyptian Pound</option>
+            <option value="EUR">EUR - Euro</option>
+            <option value="FJD">FJD - Fijian Dollar</option>
+            <option value="GBP">GBP - British Pound</option>
+            <option value="GTQ">GTQ - Guatemalan Quetzal</option>
+            <option value="HKD">HKD - Hong Kong Dollar</option>
+            <option value="HRK">HRK - Croatian Kuna</option>
+            <option value="HUF">HUF - Hungarian Forint</option>
+            <option value="IDR">IDR - Indonesian Rupiah</option>
+            <option value="ILS">ILS - Israeli Shekel</option>
+            <option value="INR" selected>INR - Indian Rupee</option>
+            <option value="ISK">ISK - Icelandic Krona</option>
+            <option value="JPY">JPY - Japanese Yen</option>
+            <option value="KRW">KRW - South Korean Won</option>
+            <option value="KZT">KZT - Kazakhstani Tenge</option>
+            <option value="MXN">MXN - Mexican Peso</option>
+            <option value="MYR">MYR - Malaysian Ringgit</option>
+            <option value="NOK">NOK - Norwegian Krone</option>
+            <option value="NZD">NZD - New Zealand Dollar</option>
+            <option value="PAB">PAB - Panamanian Balboa</option>
+            <option value="PEN">PEN - Peruvian Sol</option>
+            <option value="PHP">PHP - Philippine Peso</option>
+            <option value="PKR">PKR - Pakistani Rupee</option>
+            <option value="PLN">PLN - Polish Zloty</option>
+            <option value="PYG">PYG - Paraguayan Guarani</option>
+            <option value="RON">RON - Romanian Leu</option>
+            <option value="RUB">RUB - Russian Ruble</option>
+            <option value="SAR">SAR - Saudi Arabian Riyal</option>
+            <option value="SEK">SEK - Swedish Krona</option>
+            <option value="SGD">SGD - Singapore Dollar</option>
+            <option value="THB">THB - Thai Baht</option>
+            <option value="TRY">TRY - Turkish Lira</option>
+            <option value="TWD">TWD - Taiwan New Dollar</option>
+            <option value="UAH">UAH - Ukrainian Hryvnia</option>
+            <option value="USD">USD - US Dollar</option>
+            <option value="UYU">UYU - Uruguayan Peso</option>
+            <option value="VND">VND - Vietnamese Dong</option>
+            <option value="ZAR">ZAR - South African Rand</option>
+          </select>
+        </div>
+      </div>
+      <div class="conversion">
+        <p id="currency-name">1.00 US Dollar =</p>
+        <p id="currency-value">82.72837 Indian Rupees</p>
+        <small id="conversion-overview">1 INR = 0.0120878 USD</small>
+      </div>
+    </div>
+    <script src="./scripts/" type="javascript"></script>
+  </body>
 </html>
