script completed and css update

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
         </div>
       </div>
       <div class="conversion">
-        <p id="currency-name">1.00 US Dollar =</p>
-        <p id="currency-value">82.72837 Indian Rupees</p>
-        <small id="conversion-overview">1 INR = 0.0120878 USD</small>
+        <p id="currency-name"></p>
+        <p id="currency-value"></p>
+        <small id="conversion-overview"></small>
       </div>
     </div>
-    <script src="./scripts/" type="javascript"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
